Bela.java
/* Generated By:JavaCC: Do not edit this line. Bela.java */
import java.io.*;
import java.util.ArrayList;
import ast.*;

public class Bela implements BelaConstants {

  public static void main(String args[]) throws ParseException, IOException {
    Bela parser = new Bela(new FileInputStream(args[0]));
    Prog arvore = parser.Bela();
    //geraCodigo(arvore, args[0]);
  }

  static final public Prog Bela() throws ParseException {
  Main main = null; ArrayList<Fun> func = null;
    main = Main();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FUN:
      func = Func();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
                                   {if (true) return new Prog(main, func);}
    throw new Error("Missing return statement in function");
  }

  static final public Main Main() throws ParseException {
  ArrayList<VarDecl> vars = null; ArrayList<Comando> coms = null;
    jj_consume_token(MAIN);
    jj_consume_token(APAR);
    jj_consume_token(FPAR);
    jj_consume_token(ACHAVES);
    vars = VarDecl();
    coms = SeqComandos();
    jj_consume_token(FCHAVES);
    {if (true) return new Main(vars, coms);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<VarDecl> VarDecl() throws ParseException {
  ArrayList<VarDecl> vars = new ArrayList<VarDecl>(); Token id; String tipo;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      jj_consume_token(VAR);
      tipo = Tipo();
      id = jj_consume_token(TOKEN_id);
      jj_consume_token(SEQ);
                                                vars.add(new VarDecl(tipo, id.image));
    }
    {if (true) return vars;}
    throw new Error("Missing return statement in function");
  }

  static final public String Tipo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FLOAT:
      jj_consume_token(FLOAT);
            {if (true) return "float";}
      break;
    case BOOL:
      jj_consume_token(BOOL);
           {if (true) return "bool";}
      break;
    case VOID:
      jj_consume_token(VOID);
           {if (true) return "void";}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<Comando> SeqComandos() throws ParseException {
  ArrayList<Comando> coms = new ArrayList<Comando>(); Comando c = null;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case RETURN:
      case PRINTLN:
      case TOKEN_id:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      c = Comando();
                    coms.add(c);
    }
    {if (true) return coms;}
    throw new Error("Missing return statement in function");
  }

  static final public Comando Comando() throws ParseException {
  Token id = null;
  Token ifToken = null;
  Token whileToken = null;
  Token returnToken = null;
  Token printLnToken = null;
  Exp exp = null;
  ArrayList<Comando> coms = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TOKEN_id:
      id = jj_consume_token(TOKEN_id);
                    {if (true) return ComandoL(id);}
      break;
    case IF:
      ifToken = jj_consume_token(IF);
      exp = Exp();
      jj_consume_token(THEN);
      jj_consume_token(ACHAVES);
      coms = SeqComandos();
      jj_consume_token(FCHAVES);
      jj_consume_token(SEQ);
                                                                                     {if (true) return new CIf(ifToken.beginLine, exp, coms);}
      break;
    case WHILE:
      whileToken = jj_consume_token(WHILE);
      exp = Exp();
      jj_consume_token(THEN);
      jj_consume_token(ACHAVES);
      coms = SeqComandos();
      jj_consume_token(FCHAVES);
      jj_consume_token(SEQ);
                                                                                           {if (true) return new CWhile(whileToken.beginLine, exp, coms);}
      break;
    case RETURN:
      returnToken = jj_consume_token(RETURN);
      exp = Exp();
      jj_consume_token(SEQ);
                                             {if (true) return new CReturn(returnToken.beginLine, exp);}
      break;
    case PRINTLN:
      printLnToken = jj_consume_token(PRINTLN);
      exp = Exp();
      jj_consume_token(SEQ);
                                               {if (true) return new CPrint(printLnToken.beginLine, exp);}
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Comando ComandoL(Token id) throws ParseException {
  Exp exp = null;
  Token atrib = null;
  Token chamadaFun = null;
  ArrayList<Exp> exps = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATRIB:
      atrib = jj_consume_token(ATRIB);
                    {if (true) return ComandoLL(atrib, id);}
      break;
    case APAR:
      chamadaFun = jj_consume_token(APAR);
      exps = ListaExp();
      jj_consume_token(FPAR);
      jj_consume_token(SEQ);
                                                       {if (true) return new CChamadaFun(chamadaFun.beginLine, id.image, exps);}
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Comando ComandoLL(Token atrib, Token id) throws ParseException {
  Exp exp = null; Token read = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case APAR:
    case SEQ:
    case TRUE:
    case FALSE:
    case TOKEN_id:
    case TOKEN_numliteral:
      exp = Exp();
      jj_consume_token(SEQ);
                      {if (true) return new CAtribuicao(atrib.beginLine, id.image, exp);}
      break;
    case READINPUT:
      read = jj_consume_token(READINPUT);
      jj_consume_token(APAR);
      jj_consume_token(FPAR);
      jj_consume_token(SEQ);
                                             {if (true) return new CReadInput(read.beginLine, id.image);}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Exp() throws ParseException {
  String op = null;
  Exp exp1 = null;
  Exp exp2 = null;
  Exp f = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case APAR:
      jj_consume_token(APAR);
      exp1 = Exp();
      op = Op();
      exp2 = Exp();
      jj_consume_token(FPAR);
                                                      {if (true) return new EOpExp(op, exp1, exp2);}
      break;
    default:
      jj_la1[7] = jj_gen;
      f = Fator();
                {if (true) return f;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Fator() throws ParseException {
  Token id = null;
  ArrayList<Exp> exps = null;
  Token t = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TOKEN_id:
      id = jj_consume_token(TOKEN_id);
                    exps = FatorL(); {if (true) return new EChamadaFun(id.image, exps);}
      break;
    case TOKEN_numliteral:
      t = jj_consume_token(TOKEN_numliteral);
                           {if (true) return new EFloat(Float.parseFloat(t.image));}
      break;
    case TRUE:
      jj_consume_token(TRUE);
           {if (true) return new ETrue();}
      break;
    case FALSE:
      jj_consume_token(FALSE);
            {if (true) return new EFalse();}
      break;
    default:
      jj_la1[8] = jj_gen;
    {if (true) throw new ParseException("Erro: express\u00e3o inv\u00e1lida na regra Fator.");}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<Exp> FatorL() throws ParseException {
  ArrayList<Exp> exps = new ArrayList<Exp>();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case APAR:
      jj_consume_token(APAR);
      exps = ListaExp();
      jj_consume_token(FPAR);
                                    {if (true) return exps;}
      break;
    default:
      jj_la1[9] = jj_gen;
    {if (true) return exps;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public String Op() throws ParseException {
  Token op = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SOMA:
      op = jj_consume_token(SOMA);
               {if (true) return op.image;}
      break;
    case SUB:
      op = jj_consume_token(SUB);
              {if (true) return op.image;}
      break;
    case MULT:
      op = jj_consume_token(MULT);
               {if (true) return op.image;}
      break;
    case DIV:
      op = jj_consume_token(DIV);
              {if (true) return op.image;}
      break;
    case AND:
      op = jj_consume_token(AND);
              {if (true) return op.image;}
      break;
    case OR:
      op = jj_consume_token(OR);
             {if (true) return op.image;}
      break;
    case MENORQ:
      op = jj_consume_token(MENORQ);
                 {if (true) return op.image;}
      break;
    case MAIORQ:
      op = jj_consume_token(MAIORQ);
                 {if (true) return op.image;}
      break;
    case COMPARA:
      op = jj_consume_token(COMPARA);
                  {if (true) return op.image;}
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<Exp> ListaExp() throws ParseException {
  Exp exp = null;
  ArrayList<Exp> exps = new ArrayList<Exp>();
  ArrayList<Exp> expsL = new ArrayList<Exp>();
    exp = Exp();
                exps.add(exp);
    expsL = ListaExpL();
                                                       exps.addAll(expsL);
                                                                               {if (true) return exps;}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<Exp> ListaExpL() throws ParseException {
  Exp exp = null;
  ArrayList<Exp> exps = new ArrayList<Exp>();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_3;
      }
      jj_consume_token(VIRGULA);
      exp = Exp();
                            exps.add(exp);
    }
    {if (true) return exps;}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<Fun> Func() throws ParseException {
  ArrayList<Fun> funcs = new ArrayList<Fun>();
  Token nome = null;
  ArrayList<ParamFormalFun> params = new ArrayList<ParamFormalFun>();
  String retorno = null;
  ArrayList<VarDecl> vars = new ArrayList<VarDecl>();
  ArrayList<Comando> body = new ArrayList<Comando>();
    label_4:
    while (true) {
      jj_consume_token(FUN);
      retorno = Tipo();
      nome = jj_consume_token(TOKEN_id);
      jj_consume_token(APAR);
      params = ListaArg();
      jj_consume_token(FPAR);
      jj_consume_token(ACHAVES);
      vars = VarDecl();
      body = SeqComandos();
      jj_consume_token(FCHAVES);
      funcs.add(new Fun(nome.image, params, retorno, vars, body));
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FUN:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_4;
      }
    }
    {if (true) return funcs;}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<ParamFormalFun> ListaArg() throws ParseException {
  String tipo = null;
  Token id = null;
  ArrayList<ParamFormalFun> params = new ArrayList<ParamFormalFun>();
    tipo = Tipo();
    id = jj_consume_token(TOKEN_id);
                                  params.add(new ParamFormalFun(tipo, id.image));
                                                                                      params.addAll(ListaArgL());
    {if (true) return params;}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<ParamFormalFun> ListaArgL() throws ParseException {
  String tipo = null;
  Token id = null;
  ArrayList<ParamFormalFun> params = new ArrayList<ParamFormalFun>();
    jj_consume_token(VIRGULA);
    tipo = Tipo();
    id = jj_consume_token(TOKEN_id);
                                            params.add(new ParamFormalFun(tipo, id.image));
    {if (true) return params;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public BelaTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[13];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x40,0x800,0x38000,0xd40000,0xd40000,0x4080,0x201080,0x80,0x0,0x80,0xff000000,0x2000,0x40,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x8,0x8,0x0,0x1e,0x0,0x1e,0x0,0x1,0x0,0x0,};
   }

  /** Constructor with InputStream. */
  public Bela(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Bela(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new BelaTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Bela(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new BelaTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Bela(BelaTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(BelaTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[44];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 13; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 44; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

  //public static void geraCodigo(Prog prog, String nomeArquivo) {
    // Implementação da geração de código aqui
  //}
}
